--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"jose": "^6.1.3",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-markdown": "^10.1.0",
 		"react-router-dom": "^7.11.0",
 		"zod": "^4.3.4"
 	},
